--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -1,4 +1,7 @@
 .searchbox-results {
+  @include sm {
+    margin-top: 80px;
+  }
   .form-search {
     display: flex;
   }
@@ -21,6 +24,7 @@
 .searchResults-number {
   padding-bottom: 0.75rem;
   border-bottom: 2px solid #9e9e9e;
+  margin-left: 0 !important;
 }
 /* .searchResults-results {
   border-bottom: 2px solid #9e9e9e;
@@ -37,22 +41,29 @@
     margin-top: 0;
     width: 100%;
     @include sm {
-      width: 300px;
+      width: 30%;
+      max-width: 300px;
       margin-top: -1rem;
     }
   }
   .searchResults-title {
-    width: 60%;
+    width: 100%;
+    @include sm {
+      width: 60%;
+    }
     @include lg {
       width: 70%;
     }
   }
   .searchResults-description {
-    width: 50%;
+    width: 100%;
     margin-bottom: 1rem;
+    @include sm {
+      width: 50%;
+      margin-bottom: 0;
+    }
     @include lg {
       width: 70%;
-      margin-bottom: 0;
     }
   }
 }
