--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -23,14 +23,17 @@
 
 .searchResults-number {
   padding-bottom: 0.75rem;
-  border-bottom: 2px solid #9e9e9e;
+  border-bottom: 4px solid #000;
   margin-left: 0 !important;
 }
 /* .searchResults-results {
   border-bottom: 2px solid #9e9e9e;
 } */
 .searchResults-result {
-  border-bottom: 2px solid #9e9e9e;
+  border-bottom: 2px solid #000;
+  &:last-of-type{
+    border-bottom: 4px solid #000;
+  }
 }
 .searchResults-result.has-image {
   display: flex;
