--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -414,15 +414,6 @@
   }
 }
 
-.icon-map{
-  &::before{
-  content: '\e914';
-  font-family: 'icomoon';
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background: red;
-}
+.brand-carousel-content {
+  width: 30%;
 }
