--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -417,3 +417,17 @@
 .brand-carousel-content {
   width: 30%;
 }
+
+
+.icon-map{
+  &::before{
+  content: '\e914';
+  font-family: 'icomoon';
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: red;
+}
+}
