--- a/src/scss/brand/components/accessibility/_index.scss
+++ b/src/scss/brand/components/accessibility/_index.scss
@@ -119,6 +119,19 @@ button {
     }
 
     .social-pages {
+      .reference-svg-icons-with-link {
+        a {
+          background: #eaeaea;
+          width: 35px;
+          height: 35px;
+          line-height: 40px;
+          text-align: center;
+          margin: 0 2px;
+          span {
+            font-size: 1rem;
+          }
+        }
+      }
       .icons-with-link {
         a {
           margin-top: 2px;
