--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -458,8 +458,8 @@
     .play {
       top: auto;
       left: auto;
-      bottom: 0;
-      right: 0;
+      bottom: 1rem;
+      right: 1rem;
     }
   }
 }
