--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -56,8 +56,8 @@
   }
   #searchCareer{
     position: absolute;
-    right: 31px;
-    bottom: 32px;
+    right: 2rem;
+    bottom: 2.5rem;
     @include sm{
       position: relative;
       bottom: auto;
