--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -445,3 +445,39 @@
 }
 
 /* Our brand Carousel end */
+.bg-sky{
+  background: $color-secondary-aqua;
+}
+
+.other-info-icon::before{
+  content: 'e912';
+  font-family: 'icomoon' !important;
+  padding: 0.5rem;
+  position: absolute;
+  left: -4rem;
+  @extend .bg-sky;
+}
+.other-contrast-icon::before{
+  content: 'e90f';
+  font-family: 'icomoon' !important;
+  padding: 0.5rem;
+  position: absolute;
+  left: -4rem;
+  @extend .bg-sky;
+}
+.other-alert-icon::before{
+  content: 'e900';
+  font-family: 'icomoon' !important;
+  padding: 0.5rem;
+  position: absolute;
+  left: -4rem;
+  @extend .bg-sky;
+}
+.tick-icon::before{
+  content: 'e90c';
+  font-family: 'icomoon' !important;
+  padding: 0.5rem;
+  position: absolute;
+  left: -4rem;
+  @extend .bg-sky;
+}
