our brand changes

--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -429,7 +429,8 @@
 
 /* Our brand Carousel */
 
-.brand-carousel-content-wrapper {
+/* .brand-carousel-content-wrapper {
+  margin-left: 2rem;
   .imageCompatibleMarkup img {
     height: 28rem !important;
   }
@@ -437,11 +438,9 @@
 .brand-carousel-content {
   width: 30%;
   height: 28rem !important;
-  margin-left: 2rem !important;
-  box-shadow: 0px 16px 40px -8px rgba(0, 0, 0, 0.1);
   .richText {
     padding: 1rem 1rem 1rem !important;
   }
-}
+} */
 
 /* Our brand Carousel end */
