--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -446,38 +446,35 @@
 
 /* Our brand Carousel end */
 .bg-sky{
+  &::before{
   background: $color-secondary-aqua;
+  width: 2rem;
+  height: 2rem;
+  font-family: 'icomoon' !important;
+  padding: 0.5rem;
+  position: absolute;
+  left: 0;
+  @include sm{
+  left: -4rem;
+  }
+}
 }
 
 .other-info-icon::before{
-  content: 'e912';
-  font-family: 'icomoon' !important;
-  padding: 0.5rem;
-  position: absolute;
-  left: -4rem;
+  content: '\e912';
   @extend .bg-sky;
 }
 .other-contrast-icon::before{
-  content: 'e90f';
-  font-family: 'icomoon' !important;
-  padding: 0.5rem;
-  position: absolute;
+  content: '\90f';
   left: -4rem;
   @extend .bg-sky;
 }
 .other-alert-icon::before{
-  content: 'e900';
-  font-family: 'icomoon' !important;
-  padding: 0.5rem;
-  position: absolute;
+  content: '\e900';
   left: -4rem;
   @extend .bg-sky;
 }
 .tick-icon::before{
-  content: 'e90c';
-  font-family: 'icomoon' !important;
-  padding: 0.5rem;
-  position: absolute;
-  left: -4rem;
+  content: '\e90c';
   @extend .bg-sky;
 }
