--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -453,6 +453,7 @@
     padding: 0.5rem;
     position: absolute;
     left: 0;
+    text-align: center;
     @include sm {
       left: -4rem;
     }
@@ -464,16 +465,23 @@
   @extend .bg-sky;
 }
 .other-contrast-icon::before {
-  content: '\90f';
-  left: -4rem;
+  content: '\e90f';
   @extend .bg-sky;
 }
 .other-alert-icon::before {
   content: '\e900';
-  left: -4rem;
   @extend .bg-sky;
 }
 .tick-icon::before {
   content: '\e90c';
   @extend .bg-sky;
+}
+
+.white-stripped{
+  content: '';
+    position: absolute;
+    left: 0;
+    background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/logo/measure.png);
+    width: 2rem;
+    height: 100%;
 }
