--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -6,6 +6,11 @@
     @include sm {
       padding: 1.5rem 1.5rem 8.5rem;
     }
+    .image {
+      img {
+        width: auto !important;
+      }
+    }
   }
 
   .card-image {
