--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -208,6 +208,10 @@
     margin: 0 10px 0 0 !important;
     padding: 5px 10px !important;
     color: $color-2 !important;
+    &::before{
+      display: none;
+      content: '';
+    }
   }
 }
 
@@ -485,5 +489,28 @@
     background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/logo/measure.png);
     width: 2rem;
     height: 100%;
+  }
+}
+.opportunity-sec{
+  @include sm{
+    padding-left: 6rem;
+  }
+  @include sm{
+    padding-left: 3rem;
+  }
+  .heading{
+    @include sd{
+      font-size: 2.5rem;
+    }
+   @include lg{
+     font-size: 4.5rem;
+   }
+  
+  }
+}
+.aqua-content{
+  padding-left: 4rem;
+  @include sm{
+    padding-left: 0rem;
   }
 }
