--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -17,6 +17,7 @@
 .haleon-career-search-input-element {
   display: flex;
   flex-direction: column;
+  position: relative;
   @include sm {
     flex-direction: row;
     justify-content: center;
@@ -43,7 +44,10 @@
   padding: 2rem;
   background: #ffffff;
   box-shadow: 0px 16px 40px -8px #0000001a;
-  max-width: 994px;
+  max-width: 90%;
+  @include sd{
+    max-width: 80%;
+  }
   input {
     width: 100%;
     margin: 0.5rem 0;
@@ -53,7 +57,9 @@
     padding: 1rem;
     border: none;
     height: 48px;
- 
+    @include sm {
+      margin: 0 1.5rem 0 0;
+    }
     &#location {
       width: calc(100% - 4rem) !important;
       @include sm{
@@ -63,8 +69,8 @@
   }
   #searchCareer {
     position: absolute;
-    right: 2rem;
-    bottom: 2.5rem;
+    right: 0rem;
+    bottom: 0.5rem;
     @include sm {
       position: relative;
       bottom: auto;
