--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -439,6 +439,7 @@
   width: 65%;
   margin-left: -30%;
   box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
+  height: 100%;
 }
 
 .half-carousel .carousel-slides .carousel-slide.active .carouselSlide {
@@ -480,6 +481,13 @@
   }
 }
 .half-carousel .brand-tile .image {
+  width: 60%;
+}
+
+.brand-carousel-content{
+  width: 40%;
+}
+.brand-carousel-content + .image img{
   width: 60%;
 }
 
