--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -47,7 +47,7 @@
   background: #ffffff;
   box-shadow: 0px 16px 40px -8px #0000001a;
   max-width: 100%;
-  @include sd{
+  @include sm{
     max-width: 80%;
   }
   input {
