--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -442,3 +442,9 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.m-order-2 {
+  @media screen and (max-width: 767px) {
+    order: 2;
+  }
+}
