--- a/src/scss/brand/components/icons/_index.scss
+++ b/src/scss/brand/components/icons/_index.scss
@@ -62,7 +62,7 @@
 .icon-arrow--right:after {
   content: '\e907';
   @extend .icomoon;
-  margin-right: 0.25rem;
+  margin-left: 0.25rem;
 }
 .icon-arrow-top:before {
   content: '\e908';
