--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -243,10 +243,11 @@
  */
 
 .custamized-banner {
-  padding-left: 1.5rem !important;
-  padding-right: 1.5rem !important;
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
 
-  @include sm {
+  @include md {
+    padding-left: 1.5rem !important;
     padding-right: 0 !important;
   }
 
@@ -324,8 +325,11 @@
       }
 
       > div {
-        padding: 2rem 3rem 0 0;
+        padding: 2rem 1rem 0 1rem;
         order: 2;
+        @include md {
+          padding: 2rem 3rem 0 0;
+        }
 
         @include sm {
           order: unset;
@@ -348,7 +352,7 @@
       padding: 0;
       position: absolute;
       bottom: 2rem;
-      left: 0;
+      left: 1rem;
       cursor: pointer;
       width: 50px;
       justify-content: space-between;
@@ -358,6 +362,9 @@
 
       @include sm {
         bottom: 3rem;
+      }
+      @include md {
+        left: 0;
       }
 
       @include sd {
