--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -425,7 +425,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: #EAEAEA;
+    background: #eaeaea;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -490,6 +490,20 @@
 }
 .brand-carousel-content + .image {
   width: 60%;
+}
+
+.highlighted-content {
+  position: absolute;
+  background: $color-2;
+  left: 25%;
+  top: 0rem;
+  z-index: 1;
+  width: 40%;
+  text-align: center;
+  padding: 10px 0 0 0;
+  p {
+    color: $color-white;
+  }
 }
 
 /* Our brand Carousel end */
