--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -425,7 +425,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: #EAEAEA;
+    background: #eaeaea;
     display: flex;
     align-items: center;
     justify-content: center;
