--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -448,8 +448,8 @@ a:hover {
     order: 2;
   }
 }
-.img-quarter-width-m img {
+.img-quarter-width-m {
   @media screen and (min-width: 768px) and (max-width: 992px) {
-    width: 75%;
+    width: 33.33% !important;
   }
 }
