--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -585,6 +585,10 @@
   }
 }
 .location-result-wrapper{
+  padding-top: 2rem;
+  @include sd{
+    padding-top: 0;
+  }
   border-bottom: 4px solid $color-black;
   border-top: 4px solid $color-black;
   .article-filter{
