--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -492,7 +492,7 @@
 
 .brand-carousel-content {
   width: 40%;
-  padding: 1.5rem;
+  padding: 1.5rem !important;
 }
 .brand-carousel-content + .image {
   width: 60%;
@@ -522,9 +522,9 @@
   box-shadow: 0px 12px 20px -4px #0000001a;
   z-index: 84;
 }
-.half-carousel .lSPager {
+/* .half-carousel .lSPager {
   display: none;
-}
+} */
 
 .highlighted-sec-wrapper {
   margin-top: -7rem;
@@ -532,7 +532,12 @@
 }
 
 .highlighted-sec-content {
-  margin: 12rem 0 5rem !important;
+  margin: 12rem auto 5rem !important;
+  max-width: 860px !important;
+  padding: 1rem 2rem 0.5rem;
+  p {
+    text-align: left;
+  }
 }
 
 /* Our brand Carousel end */
