--- a/src/scss/brand/components/filter/_index.scss
+++ b/src/scss/brand/components/filter/_index.scss
@@ -88,7 +88,7 @@
 .operate-filter-article-section {
   .faqs-filter {
     padding: 5px;
-    width: 200px;
+    // width: 200px;
     margin-bottom: 1rem;
     position: relative;
 
@@ -139,3 +139,36 @@
     }
   }
 }
+
+
+
+
+.faqs-filter {
+  cursor: pointer !important;
+}
+
+//  refactoring css start
+.filter-container-js {
+  .faqs-filter{
+    border: 0px;
+    background: #fff;
+    padding: 0.24rem 0; 
+    text-align: left;
+    .selected-item-js{
+      padding:0; 
+    }
+    .filter-item-js{
+      .filter-item-js:not(.multilevel).active-js{
+        background-color: #fff;
+        color: #333;
+        border: 1px solid;
+      }
+      .filter-item-js{
+        background-color: #ddd;
+        border: solid #000 1px !important;
+      }
+    }
+    
+  }
+}
+//  refactoring css end
