--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -602,6 +602,9 @@
     @include sm {
       padding-left: 3rem;
     }
+    @include lg{
+      padding-left: 0rem;
+    }
     .heading {
       @include sd {
         font-size: 2.5rem;
