--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -228,7 +228,7 @@
     .two-steps {
       padding-left: 0.75rem;
       @include sm {
-        font-size: 0.938;
+        font-size: 0.938rem;
         margin-left: 0;
       }
       @include sd{
