--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -677,3 +677,11 @@
     }
   }
 }
+
+/* Quaterly result filter css */
+
+.class-filter[data-type='buttons'] .filter-list-js .filter-item-js{
+  
+}
+
+/* Quaterly result filter css end */
