--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -680,8 +680,8 @@
 
 /* Quaterly result filter css */
 
-.class-filter[data-type='buttons'] .filter-list-js .filter-item-js{
-  
+.class-filter[data-type='buttons'] .filter-list-js .filter-item-js {
+  margin-left: 0;
 }
 
 /* Quaterly result filter css end */
