--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -667,11 +667,14 @@
     padding-top: 4rem;
     padding-bottom: 2rem;
     border-bottom: 2px solid $color-black;
-    &:last-child{
+    &:last-child {
       border-bottom: 4px solid $color-black;
     }
     @include sd {
       padding-top: 2rem;
     }
   }
+}
+.flex > div > div > div.career-search-wrapper {
+  margin-right: auto !important;
 }
