--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -420,6 +420,7 @@
 .icon-map {
   &::before {
     content: '\e914';
+    font-family: 'icomoon';
     width: 40px;
     height: 40px;
     position: absolute;
@@ -657,7 +658,7 @@
 }
 .location-result-wrapper {
   padding-top: 2rem;
-  border-bottom: 4px solid $color-black;
+  border-top: 4px solid $color-black;
   width: calc(100% - 2rem);
   @include sd {
     padding-top: 0;
