--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -674,7 +674,7 @@
     padding-top: 4rem;
     padding-bottom: 2rem;
     border-bottom: 2px solid $color-black;
-    &:last-child{
+    &:last-child {
       border-bottom: 4px solid $color-black;
     }
     @include sd {
@@ -685,8 +685,31 @@
 
 /* Quaterly result filter css */
 
-.class-filter[data-type='buttons'] .filter-list-js .filter-item-js {
+.story-filter .class-filter[data-type='buttons'] .filter-list-js {
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  overflow-y: auto;
+}
+
+.story-filter
+  .class-filter[data-type='buttons']
+  .filter-list-js
+  .filter-item-js {
   margin-left: 0;
+  margin-right: 1rem;
+  max-width: fit-content;
+  border: none !important;
+}
+.story-filter
+  .theme-1.class-filter[data-type='buttons']
+  .filter-list-js
+  .filter-item-js.active-js,
+.story-filter
+  .theme-1.class-filter[data-type='buttons']
+  .filter-list-js
+  .filter-item-js:hover {
+  background-color: $color-primary;
+  color: $color-2;
 }
 
 /* Quaterly result filter css end */
