--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -664,7 +664,6 @@
   }
 }
 .location-result-wrapper {
-  padding-top: 2rem;
   border-top: 4px solid $color-black;
   width: calc(100% - 2rem);
   @include sd {
@@ -674,6 +673,7 @@
   .article-filter {
     padding-top: 4rem;
     padding-bottom: 2rem;
+    margin-top: 2rem;
     border-bottom: 2px solid $color-black;
     &:last-child {
       border-bottom: 4px solid $color-black;
