--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -788,14 +788,17 @@
     &.opened-js{
       background-color: $color-white;
     }
+    .selected-item-js{
+      background-color: $color-white;
+      border: 0px;
+      padding: 0.25rem;
+      &:hover{
+        background-color: $color-white;
+      }
+    }
     &:focus-within{
       .selected-item-js{
         background-color: $color-white;
-        border: 0px;
-        padding: 0.25rem;
-        &:hover{
-          background-color: $color-white;
-        }
       }
     }
   } 
