--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -7,6 +7,7 @@
   }
   button {
     background-color: $color-primary !important;
+    border: none !important;
     &:before {
       display: none !important;
     }
@@ -17,10 +18,9 @@
     input {
       display: block !important;
       width: 100%;
-      padding: 1rem;
-      border-width: 2px;
-      border-color: #9e9e9e;
-      border-right: none;
+      padding: 1rem !important;
+      background-color: $color-grey-3;
+      border: none !important;
     }
   }
 }
