our brand changes

--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -611,6 +611,12 @@
   }
 }
 
+.half-carousel .bottom-pos-0 {
+  @include sd {
+    position: relative;
+  }
+}
+
 .half-carousel .lSPager {
   position: absolute;
   bottom: -8rem;
