--- a/src/scss/brand/components/filter/_index.scss
+++ b/src/scss/brand/components/filter/_index.scss
@@ -92,65 +92,65 @@
   overflow-x: scroll;
 }
 
-.operate-filter-article-section {
-  .faqs-filter {
-    padding: 5px;
-    // width: 200px;
-    margin-bottom: 1rem;
-    position: relative;
+// .operate-filter-article-section {
+//   .faqs-filter {
+//     padding: 5px;
+//     // width: 200px;
+//     margin-bottom: 1rem;
+//     position: relative;
 
-    .filter-list-js {
-      display: none;
-    }
-  }
+//     .filter-list-js {
+//       display: none;
+//     }
+//   }
 
-  .faqs-filter:after {
-    position: absolute;
-    top: 4px;
-    right: 20px;
-    font-family: monospace;
-    z-index: -1;
-    content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/dropdown-arrow.svg');
-  }
+//   .faqs-filter:after {
+//     position: absolute;
+//     top: 4px;
+//     right: 20px;
+//     font-family: monospace;
+//     z-index: -1;
+//     content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/dropdown-arrow.svg');
+//   }
 
-  .faqs-filter.opened-js {
-    .filter-list-js {
-      display: block;
-      position: absolute;
-      background: #fff;
-      width: auto;
-      height: auto;
-      z-index: 100;
-      border: 1px solid #000;
-      left: 0px;
-      padding: 5px;
+//   .faqs-filter.opened-js {
+//     .filter-list-js {
+//       display: block;
+//       position: absolute;
+//       background: #fff;
+//       width: auto;
+//       height: auto;
+//       z-index: 100;
+//       border: 1px solid #000;
+//       left: 0px;
+//       padding: 5px;
 
-      .filter-item-js {
-        background-color: #ddd;
-        border: solid #000 1px !important;
-        margin-bottom: 10px;
-      }
-    }
-  }
-}
+//       .filter-item-js {
+//         background-color: #ddd;
+//         border: solid #000 1px !important;
+//         margin-bottom: 10px;
+//       }
+//     }
+//   }
+// }
 
-.page-where-we-operate {
-  .faqs-filter.opened-js {
-    .filter-list-js {
-      .filter-item-js {
-        &:focus {
-          &:focus-visible {
-            outline: 2px dotted;
-          }
-        }
-      }
-    }
-  }
-}
+// .page-where-we-operate {
+//   .faqs-filter.opened-js {
+//     .filter-list-js {
+//       .filter-item-js {
+//         &:focus {
+//           &:focus-visible {
+//             outline: 2px dotted;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
 
-.faqs-filter {
-  cursor: pointer !important;
-}
+// .faqs-filter {
+//   cursor: pointer !important;
+// }
 
 // //  refactoring css start
 // .filter-container-js {
