--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -791,6 +791,9 @@
   .filter-container-js{
     &.opened-js{
       background-color: $color-white;
+      .selected-item-js{
+        background-color: $color-white;
+      }
     }
     .selected-item-js{
       background-color: $color-white;
