--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -11,7 +11,6 @@
         border-bottom: 2px solid transparent !important;
 
         @include sm {
-          width: 100% !important;
           margin-right: 0% !important;
           border-bottom: 2px solid var(--border-color-3) !important;
         }
@@ -110,6 +109,7 @@
     display: block;
     text-decoration: none;
     border: 0;
+    padding: 0;
   }
 
   .title h1 {
@@ -600,13 +600,13 @@
 
   .tabs .tabs-nav-list .tabs-nav-item {
     margin-left: 0;
-    margin-right: 5%;
-    padding: 10px;
+    margin-right: 2rem !important;
+    padding: 1rem 0;
     width: 25%;
   }
 
   .tabs .tabs-nav-list .tabs-nav-item .text-wrapper {
-    font-size: 24px;
+    font-size: 12px;
   }
 
   .tabs .tabs-content {
