--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -219,7 +219,7 @@
     font-size: 20px;
     line-height: 24px;
     height: auto;
-    padding: 0 3rem 0 1rem;
+    padding: 1rem 3rem 1rem 1rem;
     position: relative;
   }
 
@@ -405,9 +405,12 @@
 
       .tabs-nav-item {
         margin-bottom: 0;
-        padding: 1rem 0;
+        padding: 0 !important;
         outline: 0;
         list-style-type: none;
+        @include sm {
+          padding: 1rem 0 !important;
+        }
         a {
           color: $tab-inactive-color;
           display: block;
