--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -521,8 +521,11 @@
           font-size: 20px;
           line-height: 24px;
           height: auto;
-          padding: 0 3rem 0 1rem;
+          padding: 1rem 3rem 1rem 1rem;
           position: relative;
+          @include sm {
+            padding: 0 3rem 0 1rem;
+          }
           .tabMenuItem .text-wrapper {
             &::after {
               @include animate();
