--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -219,7 +219,7 @@ header {
               font-size: $font-size-16 !important;
               font-weight: $font-normal !important;
               cursor: pointer;
-              margin: 0 5px;
+              margin: 2px 5px;
               &:hover {
                 background-color: $color-primary !important;
               }
