--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -164,7 +164,7 @@
         color: #fff;
         line-height: $line-height-150;
         padding: 5px;
-        margin-left: 0;
+        margin-left: 2px;
       }
     }
     @include sm {
