--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -459,7 +459,7 @@
   margin-left: -15%;
   box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
   height: 100%;
-  @include sm{
+  @include sm {
     width: 65%;
     margin-left: -30%;
   }
@@ -681,6 +681,13 @@
   @include sm {
     margin-top: -80px;
   }
+}
+
+.white-line-strip:before {
+  content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/brands-measure.png');
+  position: absolute;
+  left: -2rem;
+  top: -4rem;
 }
 
 /* Our brand Carousel end */
