--- a/src/scss/brand/components/accessibility/_index.scss
+++ b/src/scss/brand/components/accessibility/_index.scss
@@ -133,6 +133,10 @@ button {
               font-size: 1rem;
             }
           }
+          &:focus,
+          &:hover {
+            background-color: $color-primary;
+          }
         }
       }
       .icons-with-link {
