--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -692,6 +692,25 @@
   top: -4rem;
 }
 
+.logo-wrapper {
+  .image {
+    border: 1px solid $color-grey-3;
+  }
+}
+
+.no-top-border {
+  border-top: none;
+}
+.no-bottom-border {
+  border-bottom: none;
+}
+.no-right-border {
+  border-right: none;
+}
+.no-left-border {
+  border-left: none;
+}
+
 /* Our brand Carousel end */
 
 .bg-sky {
