--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -696,7 +696,7 @@
 .logo-wrapper {
   .image {
     border: 1px solid $color-grey-3;
-    padding: 1rem;
+    padding: 1.25rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
