--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -687,9 +687,14 @@
 }
 
 .white-line-strip {
-  .icon-angle-right {
-    margin-left: 1rem;
-    color: $color-primary;
+  a {
+    .icon-angle-right {
+      margin-left: 1rem;
+      color: $color-primary;
+    }
+    &:hover{
+      color: $color-2;
+    }
   }
   &:before {
     content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/brands-measure.png');
